# zapsign-client

./: Cargo.toml
src/: lib.rs  zapsign_client.rs
src/api/: mod.rs
src/api/create_document/: request.rs  response.rs
src/api/list_documents/: request.rs  response.rs
src/endpoints/: create_document.rs  get_docs.rs
