[package]
name = "zapsign-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustify = "0.5.3"
rustify_derive = "0.5.2"
derive_builder = "0.20"
reqwest = "0.11"
tracing = "0.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "^1.0.79"

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
wiremock = "0.6"
